index와 common 색상 바꾸기

--- a/index.css
+++ b/index.css
@@ -14,6 +14,6 @@
 }
 
 .article-list-box > ul > li:hover > a {
-    background-color:pink;
+    background-color:#afafaf;
 }
 /* .article-list-box 끝 */
